--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nerio-uploader": "^1.0.9",
     "nerio-vuetify-table": "^1.0.11",
     "roboto-fontface": "*",
+    "vee-validate": "^4.5.8",
     "vue": "^2.6.11",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
