--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "5.9.55",
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
+    "dayjs": "^1.11.3",
     "moment": "^2.29.1",
     "nerio-js-utils": "^1.0.11",
     "nerio-uploader": "^1.0.9",
