--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
     "@mdi/font": "5.9.55",
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
