--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "dayjs": "^1.11.3",
+    "luxon": "^1.28.0",
     "moment": "^2.29.1",
     "nerio-js-utils": "^1.0.11",
     "nerio-uploader": "^1.0.9",
@@ -20,10 +21,12 @@
     "roboto-fontface": "*",
     "vee-validate": "^4.5.8",
     "vue": "^2.6.11",
+    "vue-datetime": "^1.0.0-beta.14",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "weekstart": "^1.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
